// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel renders 1`] = `
<div
  className="base"
  id={undefined}
/>
`;

exports[`Panel renders with some config 1`] = `
<div
  className="base light right"
  id={undefined}
/>
`;
